--- a/src/FrontPage.css
+++ b/src/FrontPage.css
@@ -7,39 +7,18 @@
     align-items: center;             
 }
 
-.vertical-text{
-    z-index: 1;
-    width: 5px;
-    line-height: 75%;
-    font-size: 70px;
-    word-wrap: break-word;
-    word-break:break-all;
-    font-family: monospace;
-}
-
-p.down {
-    margin-top: 40%;
-}
-.vertical-text .hero {
-    position: absolute;
-    width: 5px;
-    top: 3%;
-    left: 75%;
-}
-
-.vertical-text .fish{
-    position: absolute;
-    /* width: 5px; */
-    top: 3%;
-    left: 44%;
-}
-
-
-
-
 span {
     font-size: 200px;
     font-family: Verdana;
     /* font-weight:bold; */
 
+}
+
+.instructions {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 2%;
+    background-size: 100%;
+    text-align: center;
 }
